Included a conclusion in TCP

--- a/Conformal Prediction/Binary classification TCP.ipynb
+++ b/Conformal Prediction/Binary classification TCP.ipynb
@@ -1367,7 +1367,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a20b960c",
    "metadata": {},
@@ -1787,6 +1786,15 @@
     "ax.spines[\"top\"].set_visible(False)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecc03264",
+   "metadata": {},
+   "source": [
+    "## Conclusion:\n",
+    "Naturally the prediction intervals will contain more of both labels as the confidence level increases. I find it interesting how accurate the number of wrong predictions are with the confidence level even with quite a low sample size as this dataset has."
    ]
   }
  ],
